# libwpp

./: .gitignore  CMakeLists.txt  ReadMe.md
src/: preproc.c  wpp.c
